--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>David Taylor</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,14 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="header_container"></div>
+        <div class="header_container">
+        	<div class="header_content">
+        		<div class="header_link" t="/">Home</div>
+        		<div class="header_link" t="/projects">Projects</div>
+        		<div class="header_link" t="/about">About Me</div>
+        		<div class="header_link" t="/contact">Contact</div>
+        	</div>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
