Changed the site title and tagline.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>David Taylor by djtaylor</title>
+    <title>David Taylor - IT Engineer</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>David Taylor</h1>
-        <p>Systems and Web Programmer</p>
+        <p>IT Engineer and Hobbyist</p>
 
 
         <p class="view"><a href="https://github.com/djtaylor">View My GitHub Profile</a></p>
