Styling the site name and tagline.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>David Taylor</h1>
-        <p>IT Engineer and Hobbyist</p>
+        <div class="site_user">
+        	<div class="site_user_txt">David Taylor</div>
+        </div>
+        <div class="site_tagline">
+        	<div class="site_tagline_txt">IT Engineer and Hobbyist</div>
+        </div>
 
 
         <p class="view"><a href="https://github.com/djtaylor">View My GitHub Profile</a></p>
