--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,6 +17,7 @@
     <div class="wrapper">
       <header>
         <div class="site_user">
+        	<div class="site_user_img"></div>
         	<div class="site_user_txt">David Taylor</div>
         </div>
         <div class="site_tagline">
