Changes to the name/tagline and github profile link

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <header>
         <div class="site_user">
         	<div class="site_user_img"></div>
-        	<div class="site_user_txt">David Taylor</div>
+        	<div class="site_user_txt">
+        		<div class="site_user_name">David Taylor</div>
+        		<div class="site_user_tagline">IT Engineer and Hobbyist</div>
+        	</div>
         </div>
-        <div class="site_tagline">
-        	<div class="site_tagline_txt">IT Engineer and Hobbyist</div>
+        <div class="site_github_profile">
+        	<div class="site_github_profile_txt"><p class="view"><a href="https://github.com/djtaylor">View My GitHub Profile</a></p></div>
         </div>
-
-
-        <p class="view"><a href="https://github.com/djtaylor">View My GitHub Profile</a></p>
 
       </header>
       <section>
