Adding a simple navigation

--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
   <body>
     <div class="wrapper">
       <header>
-        <div class="site_user">
+        <div class="site_user site_block_1">
         	<div class="site_user_img"></div>
         	<div class="site_user_txt">
         		<div class="site_user_name">David Taylor</div>
         		<div class="site_user_tagline">IT Engineer and Hobbyist</div>
         	</div>
         </div>
-        <div class="site_github_profile">
+        <div class="site_github_profile site_block_1">
         	<div class="site_github_profile_txt"><p class="view"><a href="https://github.com/djtaylor">View My GitHub Profile</a></p></div>
+        </div>
+        <div class="site_nav site_block_1">
+        	<div class="site_nav_item">About</div>
+        	<div class="site_nav_item">Projects</div>
+        	<div class="site_nav_item">Resume</div>
+        	<div class="site_nav_item">Contact</div>
         </div>
 
       </header>
