Adding some basic javascript for jumping between sections.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         	<div class="site_github_profile_txt"><p class="view"><a href="https://github.com/djtaylor">View My GitHub Profile</a></p></div>
         </div>
         <div class="site_nav site_block_1">
-        	<div class="site_nav_item">About</div>
-        	<div class="site_nav_item">Projects</div>
-        	<div class="site_nav_item">Resume</div>
-        	<div class="site_nav_item">Contact</div>
+        	<div class="site_nav_item" anchor="about">About</div>
+        	<div class="site_nav_item" anchor="projects">Projects</div>
+        	<div class="site_nav_item" anchor="resume">Resume</div>
+        	<div class="site_nav_item" anchor="contact">Contact</div>
         </div>
 
       </header>
@@ -61,6 +61,7 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/site.js"></script>
     
   </body>
 </html>
