Creating project blocks

--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<div class="site_block_1">
+	<div class="site_project">
+		<div class="site_project_logo" project="gitsync"></div>
+		<div class="site_project_desc">
+			<div class="site_project_title">GitSync</div>
+			<div class="site_project_txt">A Python based program designed for developers who are working with a constantly changing Git repository. Create and manage projects on a local machine from upstream Git repositories and move between any revisions in the tree.</div>
+		</div>
+	</div>
+</div>
 
 <h3>
 <a id="resume" class="anchor" href="#resume" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resume</h3>
