Images and new project.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 
 <div class="site_block_1">
 	<div class="site_project">
+		<div class="site_project_logo" project="lense"></div>
+		<div class="site_project_desc">
+			<div class="site_project_title">Lense API Engine</div>
+			<div class="site_project_txt">An API engine written in Python. Used to create a custom, modular API on a standardized backend.</div>
+		</div>
+	</div>
+	<div class="site_project">
 		<div class="site_project_logo" project="gitsync"></div>
 		<div class="site_project_desc">
 			<div class="site_project_title">GitSync</div>
