Moved some divs around

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			<div class="site_project_txt">An API engine written in Python. Used to create a custom, modular API on a standardized backend.</div>
 		</div>
 	</div>
+</div>
+<div class="site_block_1">
 	<div class="site_project">
 		<div class="site_project_logo" project="gitsync"></div>
 		<div class="site_project_desc">
