Updated index.html to show Lense subprojects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
 		<div class="site_project_logo" project="lense"></div>
 		<div class="site_project_desc">
 			<div class="site_project_title">Lense API Engine</div>
-			<div class="site_project_txt">An API engine written in Python. Used to create a custom, modular API on a standardized backend.</div>
+			<div class="site_project_txt">An API engine written in Python. Used to create a custom, modular API on a standardized backend.
+				<ul>
+					<li><a href="https://github.com/djtaylor/lense-common" target="_blank">Lense Common</a></li>
+					<li><a href="https://github.com/djtaylor/lense-client" target="_blank">Lense Client</a></li>
+					<li><a href="https://github.com/djtaylor/lense-engine" target="_blank">Lense Engine</a></li>
+					<li><a href="https://github.com/djtaylor/lense-portal" target="_blank">Lense Portal</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
